# nesse

./: .gitignore  Cargo.toml
nesse_codegen/: Cargo.toml
nesse_codegen/reference/: undocumented.md
nesse_codegen/src/: lib.rs  main.rs
nesse_common/: Cargo.toml
nesse_common/src/: lib.rs
nesse_emu/: Cargo.toml
nesse_emu/examples/: bare_game.rs  first_game.rs  gen_snake.rs  generated_test.rs  rom_game.rs  test_cpu.rs
nesse_emu/src/: cartridge.rs  cpu.rs  emulator_state.rs  lib.rs  main.rs  mapper.rs  opcodes.rs  ppu.rs  test.rs
nesse_emu/src/emulator_state/: delta_ops.rs
nesse_emu/src/opcodes/: jumptable.rs  jumptable_reg.rs  opcode_debug.rs
nesse_emu/src/peripherals/: mod.rs
src/: lib.rs  main.rs  test.rs
