[package]
name = "nesse_codegen"
version = "0.1.0"
authors = ["Daniel Boyle <boylede+github@gmail.com>"]
edition = "2021"

[dependencies]
codegen = "0.1.3"
nesse_common = {path = "../nesse_common"}
quote = "1.0"
proc-macro2 = "1.0"
time = "0.1.40"
select = "0.4.3"
serde = { version = "1.0", features = ["derive"]}
ron = "0.6"

