[package]
name = "nesse_emu"
version = "0.1.0"
authors = ["Daniel Boyle <boylede+github@gmail.com>"]
edition = "2018"

[dependencies]
enum_dispatch = "0.3.6"
nesse_common = {path = "../nesse_common"}

[profile.release]
lto=true
codegen-units = 1
panic = 'abort'

[dev-dependencies]
# used by examples
spin_sleep = "1.0.0"
rand = "0.7"
sdl2 = {version = "0.34.5", features=["bundled"]}

[features]
delta = []